# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.5
	Martin Väth <martin at mvath.de>:
	- Let PORTAGE_REPOSITORIES _override_ (not only add to) repos.conf
	  to match with portage's behaviour
	- zsh-completion: fix checks for _tags
	- internal: Replace type(...) casting by static_cast<type>(...)
	- German translation: Many fixes and extensions by
	  André Jaenisch <andre.jaenisch at openmailbox.org>
	- Bump gettext

*eix-0.30.4
	Martin Väth <martin at mvath.de>:
	- Fix for lines ending with EOF (regression introduced in eix-0.30.3),
	  see https://github.com/vaeth/eix/issues/3
	- Support PORTAGE_REPOSITORIES
	- internal: Support parsing from mem for varsreader.cc

*eix-0.30.3
	Martin Väth <martin at mvath.de>:
	- Replace default [D] by [?] to avoid confusion with portage output
	- Remove EXEC_EBUILD, EXEC_EBUILD_SH, PORTAGE_BIN_PATH
	- Remove --with-ebuild-sh-default, --with-portage-bin-path
	- Use instead portageq, PATH, and/or EPREFIX_PORTAGE_EXEC to obtain
	  paths, see https://bugs.gentoo.org/show_bug.cgi?id=520436
	- eix-sync: Add -vn (verbose dry-run) options, see
	  https://bugs.gentoo.org/show_bug.cgi?id=509750
	- Fix more wrong usages of getline(), see
	  https://bugs.gentoo.org/show_bug.cgi?id=506106
	- Fix include files for ioctl() on solaris, see
	  https://bugs.gentoo.org/show_bug.cgi?id=510120
	- Trigger clang/gcc/glibc incompatibility when testing for c++1y, see
	  https://bugs.gentoo.org/show_bug.cgi?id=510102
	- Fix gdb instructions
	- manpage: add remarks about stability of names in future eix versions
	- manpage: fix typo in SPEEDUP
	- Russian translation: Improve spacing for eix-test-obsolete, and
	  https://developer.berlios.de/bugs/?func=detailbug&bug_id=19366&
	  group_id=11597
	- cosmetical changes to be cpplint compliant
	- Add CPPLINT.cfg

*eix-0.30.2
	Martin Väth <martin at mvath.de>:
	- Move repository to GitHub since BerliOS closes
	- Fix wrong usage of getline(), see
	  https://bugs.gentoo.org/show_bug.cgi?id=506106