@@ -16,4 +16,4 @@
 #define DROP_PERMISSIONS_BINARY 1
 #define VERSIONSORT_BINARY 1
 #define MASKED_BINARY 1
-#include "main/main.cc"
+#include "main/main.cc"  // NOLINT(build/include)
