@@ -8,4 +8,4 @@
 #include <config.h>
 
 #define DROP_PERMISSIONS_BINARY 1
-#include "main/main.cc"
+#include "main/main.cc"  // NOLINT(build/include)
